# sgetutorial

./: CMakeLists.txt  README  README.md
1/: CMakeLists.txt  main.cpp
2/: CMakeLists.txt  main.cpp
4/: machine.hpp
4/events/: pause_toggle.hpp  render.hpp  tick.hpp
4/states/ingame/: paused.hpp  running.hpp  running_fwd.hpp  superstate.cpp  superstate.hpp  superstate_fwd.hpp
