CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(blog)

INCLUDE(FcpptCMakeUtils)

# boost begin
SET(Boost_ADDITIONAL_VERSIONS "1.41" "1.41.0" "1.42" "1.42.0" "1.43" "1.43.0" "1.44" "1.44.0" "1.45.0")

FIND_PACKAGE(
	Boost 1.41.0 REQUIRED COMPONENTS
	system)

INCLUDE_DIRECTORIES(SYSTEM ${Boost_INCLUDE_DIR})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
# boost end

# fcppt begin
FIND_PACKAGE(
	Fcppt REQUIRED)

INCLUDE_DIRECTORIES(SYSTEM ${FCPPT_INCLUDE_DIRS})
LINK_DIRECTORIES(${FCPPT_LIBRARY_DIRS})
# fcppt end

# sge begin
FIND_PACKAGE(
	SGE REQUIRED COMPONENTS sprite config time texture systems)

INCLUDE_DIRECTORIES(${SGE_INCLUDE_DIRS})
# sge end

# awl begin
FIND_PACKAGE(
	AWL REQUIRED
)

INCLUDE_DIRECTORIES(${AWL_INCLUDE_DIRS})
# awl end

# fcppt begin
FIND_PACKAGE(
	Mizuiro REQUIRED)

INCLUDE_DIRECTORIES(SYSTEM ${MIZUIRO_INCLUDE_DIRS})
# fcppt end

ADD_SUBDIRECTORY(1)
ADD_SUBDIRECTORY(2)

